# plures-vault

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MICROSOFT_DEMO_SCRIPT.md  README.md  SECURITY.md  demo-workflow-test.md  migrate.sh  plures-vault-roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  performance_regression.yml  qa_failure.yml  security.yml
.github/workflows/: ci.yml  copilot-pr-lifecycle.yml  labels.yml  performance.yml  qa-issue-creation.yml  release.yml  security.yml  tech-doc-writer.yml
browser-extension/: manifest.json  native-host.json
browser-extension/icons/: README.md
browser-extension/src/: background.js  content.js  popup.css  popup.html  popup.js
crates/pluresdb/: Cargo.toml
crates/pluresdb-core/: Cargo.toml
crates/pluresdb-core/src/: lib.rs
crates/pluresdb-storage/: Cargo.toml
crates/pluresdb-storage/src/: lib.rs
crates/pluresdb-sync/: Cargo.toml
crates/pluresdb-sync/src/: lib.rs
crates/pluresdb/src/: lib.rs
crates/vault-akv/: Cargo.toml
crates/vault-akv/src/: lib.rs
crates/vault-azure/: Cargo.toml
crates/vault-azure/src/: auth.rs  client.rs  error.rs  lib.rs  sync.rs
crates/vault-core/: Cargo.toml
crates/vault-core/migrations/: 0001_initial_schema.sql
crates/vault-core/src/: lib.rs  windows_hello.rs
crates/vault-core/tests/: integration_test.rs  performance_test.rs
crates/vault-crypto/: Cargo.toml
crates/vault-crypto/src/: lib.rs
crates/vault-crypto/tests/: security_test.rs
crates/vault-enterprise/: Cargo.toml
crates/vault-enterprise/src/: audit.rs  error.rs  lib.rs  license.rs  partition.rs
crates/vault-graph/: Cargo.toml
crates/vault-graph/src/: lib.rs
crates/vault-mcp/: Cargo.toml
crates/vault-mcp/src/: lib.rs
crates/vault-sync/: Cargo.toml
crates/vault-sync/src/: lib.rs
docs/: ROADMAP.md
src/: main.rs
vault-gui/: README.md  package-lock.json  package.json  vite.config.ts
vault-gui/src/: app.css  app.html
vault-gui/src-tauri/: Cargo.toml  tauri.conf.json
vault-gui/src-tauri/icons/: icon.icns
vault-gui/src-tauri/src/: lib.rs  main.rs
vault-gui/src/lib/: api.ts  index.ts  praxis.ts
vault-gui/src/lib/components/: AuditLog.svelte  CredentialForm.svelte  MasterPasswordPrompt.svelte  PartitionManager.svelte  PartitionTabs.svelte  PasswordField.svelte  PasswordGenerator.svelte  PasswordGrid.svelte  PasswordStrengthIndicator.svelte  SecurityBadge.svelte  VaultSidebar.svelte
vault-gui/src/lib/praxis/: access-control.test.ts  access-control.ts  expectations.ts  index.ts  password-policy.test.ts  password-policy.ts  sync-authorization.test.ts  sync-authorization.ts
vault-gui/src/lib/state/: praxis.svelte.ts  vault.svelte.ts
vault-gui/src/routes/: +layout.svelte  +page.svelte
vault-gui/static/: splash.html
