[package]
name = "vault-akv"
version = "0.1.0"
edition = "2021"
description = "Azure Key Vault bidirectional sync for Plures Vault"
license = "MIT OR Apache-2.0"

[dependencies]
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
azure_security_keyvault_secrets = "0.12"
azure_identity = "0.33"
azure_core = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
sha2 = "0.10"
base64 = "0.22"
futures = "0.3"
