[package]
name = "vault-core"
version = "0.2.0"
edition = "2021"
description = "Core vault operations backed by PluresDB"

[dependencies]
vault-crypto = { path = "../vault-crypto" }
pluresdb = { path = "../../../pluresdb/crates/pluresdb" }
pluresdb-core = { path = "../../../pluresdb/crates/pluresdb-core" }
pluresdb-storage = { path = "../../../pluresdb/crates/pluresdb-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
argon2 = "0.5"
base64 = "0.22"
