[package]
name = "vault-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic operations for Plures Vault"

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10" 
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
base64 = "0.21"