[package]
name = "vault-enterprise"
version = "0.1.0"
edition = "2021"
authors = ["Plures Team <dev@plures.ai>"]
description = "Enterprise licensing, audit, and multi-partition management for Plures Vault"
license = "MIT OR Apache-2.0"

[dependencies]
vault-core = { path = "../vault-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
