[package]
name = "vault-graph"
version = "0.1.0"
edition = "2021"
description = "Graph-native secret relationship management for Plures Vault"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
