[package]
name = "vault-sync"
version = "0.2.0"
edition = "2021"
description = "P2P sync for Plures Vault via PluresDB CRDT replication"
license = "MIT OR Apache-2.0"

[dependencies]
pluresdb = { path = "../pluresdb" }
pluresdb-core = { path = "../pluresdb-core" }
pluresdb-storage = { path = "../pluresdb-storage" }
pluresdb-sync = { path = "../pluresdb-sync" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
