[package]
name = "plures-vault-gui"
version = "0.1.0"
description = "Zero-trust P2P password manager with Hyperswarm sync"
authors = ["Plures Team"]
license = "MIT"
repository = "https://github.com/plures/plures-vault"
edition = "2021"

[lib]
name = "plures_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Add our vault core dependencies
vault-core = { path = "../../crates/vault-core" }
vault-crypto = { path = "../../crates/vault-crypto" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]